background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100vw;
-  min-height: 100%;
+  min-height: 100vh;
   font-family: pokemonFontSolid;
 }
 
